Version 0.01.47
Development version - not yet released

-------------------------------------------------------------------------------

Version 0.01.46
May 18 2014

 - Added c <number> to view comments for a video
    (first 50 comments, no reply-comments)

 - Added feature to match album tracks using MusicBrainz (vixus0)
    To search albums, enter "album" optionally followed by album title

 - Custom formatted search result list using "set columns" command
   Optionally shows: rating, likes, dislikes, views, user, date, category
   and comments (number of) in search results

 - Added "set order <relevance|views|rating|date>" command for
     specifying search result ordering

 - Added "set console-width" for setting output width (default 80)

 - Added uploaded date in video info display (request #64)

 - Added likes / dislikes in video info display

-------------------------------------------------------------------------------

Version 0.01.44
Mar 27 2014

 - Added max_res config item for selecting video resolution (request 56)
 - Added window_size and window_pos for selecting size / position of player
 - Improved handling of playlist file read/write (issue 66)
 - Revert to lower quality on unavailable/corrupt streams (issue 65)
 - Enabled multiple invocation commands (comma separated) (request 61)
    Eg: mpsyt //the doors, 1, shuffle, 1-3-a, quit
 - Improved url caching
 - Added shuffle command (no arguments, shuffles displayed items)
 - Handle 'video not available in your country' during multiple downloads
 - Fix UnicodeDecodeError in mplayer progress parsing (issue 58)
 - Fix UnicodeEncodeError under Windows with Python 2.7 (issue 59)

-------------------------------------------------------------------------------

Version 0.01.41
Mar 14 2014

 - new configuration option, max_results - sets number of returned results
    (1 - 50)
 - pl <url> now accepts YouTube playlist id's as well as url's