@@ -66,6 +66,12 @@ try:
 except ImportError:
     has_readline = False
 
+try:
+    import xerox
+    has_xerox = True
+
+except ImportError:
+    has_xerox = False
 
 # Python 3 compatibility hack
 
@@ -2692,7 +2698,8 @@ def show_help(choice):
 
              "tips": ("undump dump -f -w -a adv advanced".split(" ")),
 
-             "basic": ("basic comment basics c comments u i".split()),
+             "basic": ("basic comment basics c copy clipboard comments u "
+                       "i".split()),
 
              "config": ("set checkupdate colours colors ddir directory player "
                         "arguments args playerargs music search_music keys "
@@ -3167,6 +3174,43 @@ def related(num):
 
     item = g.model.songs[int(num) - 1]
     related_search(item)
+
+
+def clip_copy(num):
+    """ Copy item to clipboard. """
+    if g.browse_mode == "ytpl":
+
+        p = g.ytpls[int(num) - 1]
+        link = "https://youtube.com/playlist?list=%s" % p['link']
+
+    elif g.browse_mode == "normal":
+        item = (g.model.songs[int(num) - 1])
+        link = "https://youtube.com/watch?v=%s" % item.ytid
+
+    else:
+        g.message = "clipboard copy not valid in this mode"
+        g.content = generate_songlist_display()
+        return
+
+    if has_xerox:
+
+        try:
+            xerox.copy(link)
+            g.message = c.y + link + c.w + " copied"
+            g.content = generate_songlist_display()
+
+        except xerox.base.ToolNotFound as e:
+            print(link)
+            print("Error - couldn't copy to clipboard.")
+            print(e.__doc__)
+            print("")
+            xinput("Press Enter to continue.")
+            g.content = generate_songlist_display()
+
+    else:
+        g.message = "xerox module must be installed for clipboard support\n"
+        g.message += "see https://pypi.python.org/pypi/xerox/"
+        g.content = generate_songlist_display()
 
 
 def info(num):
@@ -3677,6 +3721,7 @@ Then, when results are shown:
     {2}d <number>{1} - download video <number>
     {2}r <number>{1} - show videos related to video <number>
     {2}u <number>{1} - show videos uploaded by uploader of video <number>
+    {2}x <number>{1} - copy item <number> url to clipboard (requires xerox)
 
     {2}q{1}, {2}quit{1} - exit mpsyt
 """.format(c.ul, c.w, c.y, c.r)),
@@ -3930,6 +3975,7 @@ def main():
         'save_last': r'save\s*$',
         'pl_search': r'(?:\.\.|\/\/|pls(?:earch)?\s)\s*(.*)$',
         'setconfig': r'set\s+([-\w]+)\s*"?([^"]*)"?\s*$',
+        'clip_copy': r'x\s*(\d+)$',
         'down_many': r'(da|dv)\s+((?:\d+\s\d+|-\d|\d+-|\d,)(?:[\d\s,-]*))\s*$',
         'show_help': r'(?:help|h)(?:\s+(-?\w+)\s*)?$',
         'user_more': r'u\s?([\d]{1,4})$',
